--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 body {
     overflow-x: hidden;
+    font-weight: unset;
 }
-
+h4, h6{
+    font-weight: unset;
+}
 .dark-background {
     background-color: #282c34;
 }
@@ -17,3 +20,4 @@ body {
 .cap-text {
     text-transform: uppercase !important;
 }
+
